<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <EditText
      android:id="@+id/editDate"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:autofillHints="Date"
      android:ems="10"
      android:hint="@string/date_label"
      android:inputType="date"
      android:minHeight="48dip"
      android:textAlignment="center"
      android:textColorHint="#1628C3"
      app:layout_constraintBottom_toTopOf="@+id/editMonth"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed" />

  <EditText
      android:id="@+id/editMonth"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:autofillHints="Month"
      android:ems="10"
      android:hint="@string/month_label"
      android:inputType="date"
      android:minHeight="48dip"
      android:textAlignment="center"
      android:textColorHint="#1628C3"
      app:layout_constraintBottom_toTopOf="@+id/editYear"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editDate" />

  <EditText
      android:id="@+id/editYear"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:autofillHints="Year"
      android:ems="10"
      android:hint="@string/year_label"
      android:inputType="date"
      android:minHeight="48dip"
      android:textAlignment="center"
      android:textColorHint="#1628C3"
      app:layout_constraintBottom_toTopOf="@+id/btn_check"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editMonth" />

  <Button
      android:id="@+id/btn_check"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:minHeight="48dip"
      android:layout_marginTop="16dp"
      android:text="@string/check"
      app:layout_constraintBottom_toTopOf="@+id/txt_display"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editYear" />

  <TextView
      android:id="@+id/txt_display"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:minHeight="48dip"
      android:layout_marginTop="16dp"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btn_check" />


</androidx.constraintlayout.widget.ConstraintLayout>